# CITest

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
src/: calculator.cpp  calculator.hpp
tests/: test_calculator.cpp
